correction css footer version mobile

--- a/src/components/Main/Footer.css
+++ b/src/components/Main/Footer.css
@@ -81,4 +81,12 @@
   .FooterBottomName {
     display: none;
   }
+
+  .socialNet {
+    margin: -20px;
+  }
+
+  .LogosFooter {
+    padding: 10px;
+  }
 }
